[gd_scene load_steps=3 format=3 uid="uid://bynipdkw3xf80"]

[ext_resource type="Script" path="res://addons/asset_dock/asset_dock_grid.gd" id="1_jtjrv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hec01"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="AssetDockGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtjrv")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hec01")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SearchContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MainPanel/VBoxContainer/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search For Asset"

[node name="AssetContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer/AssetContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MainPanel/VBoxContainer/AssetContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 12

[connection signal="text_changed" from="MainPanel/VBoxContainer/SearchContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
